--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@ NGINX_VIRTUAL_HOST=api.records.ds
 ADMINER_VIRTUAL_HOST=adminer.records.ds
 REBROW_VIRTUAL_HOST=rebrow.records.ds
 DISCOVERY_HOST=api.discovery.ds
+DISCOVERY_CREDENTIAL=
 DIRECTORY=.
 DATABASE_HOST=records_database
 DATABASE_PORT=5432
