--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -1,6 +1,7 @@
 parameters:
   app: records
   discovery_host: api.discovery.ds
+  discovery_credential: ~
   database_host: records_database
   database_port: 5432
   database_name: records
