--- a/.env
+++ b/.env
@@ -1,15 +1,12 @@
 COMPOSE_PROJECT_NAME=dsrecords
 NETWORK=dsproxy_default
-IMAGE_TAG=0.8.0
-PROXY_HOST=127.0.0.1
-NGINX_VIRTUAL_HOST=api.records.ds
-ADMINER_VIRTUAL_HOST=adminer.records.ds
-REBROW_VIRTUAL_HOST=rebrow.records.ds
-DISCOVERY_HOST=api.discovery.ds
-DISCOVERY_CREDENTIAL=
 DIRECTORY=.
+IMAGE_TAG=0.8.0
+API_HOST=api.records.ds
 DATABASE_HOST=records_database
 DATABASE_PORT=5432
 DATABASE_NAME=records
 DATABASE_USERNAME=records
 DATABASE_PASSWORD=records
+DATABASE_UI_HOST=ui.database.records.ds
+CACHE_UI_HOST=ui.cache.records.ds
