--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -7,9 +7,9 @@ parameters:
   database_name: records
   database_user: records
   database_password: records
-  redis_host: records_redis
-  redis_name: 6
-  redis_prefix: ''
+  cache_host: records_cache
+  cache_name: 6
+  cache_prefix: ''
   jwt_private_key_path: '%kernel.root_dir%/../var/jwt/key'
   jwt_public_key_path: '%kernel.root_dir%/../var/jwt/key.pub'
   jwt_key_pass_phrase: ''
