--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -1,6 +1,7 @@
 parameters:
+  namespace: ds
   app: records
-  discovery_host: api.discovery.ds
+  discovery_host: 127.0.0.1:8500
   discovery_credential: ~
   database_host: records_database
   database_port: 5432
