--- a/api/config/services.yaml
+++ b/api/config/services.yaml
@@ -8,12 +8,42 @@ services:
     public: false
 
   App\:
-    resource: ../src/{Fixtures}
+    resource: ../src/{Controller,Fixture,Repository,Service,Stat,Tenant}
 
   App\Controller\:
     resource: ../src/Controller
     tags: [controller.service_arguments]
 
-  App\Fixtures\:
-    resource: ../src/Fixtures
+  App\Fixture\:
+    resource: ../src/Fixture
     tags: [doctrine.fixture.orm]
+
+  App\Repository\RecordRepository:
+    factory: ['@doctrine.orm.default_entity_manager', getRepository]
+    arguments:
+      - App\Entity\Record
+
+  App\Repository\RecordAssociationRepository:
+    factory: ['@doctrine.orm.default_entity_manager', getRepository]
+    arguments:
+      - App\Entity\RecordAssociation
+
+  AppBundle\Stat\Record\CountStat:
+    tags:
+      - { name: ds_statistic.stat, alias: record.count }
+
+  App\Tenant\Loader\AccessLoader:
+    tags:
+      - { name: ds_tenant.loader }
+
+  App\Tenant\Loader\ConfigLoader:
+    tags:
+      - { name: ds_tenant.loader }
+
+  App\Tenant\Unloader\RecordUnloader:
+    tags:
+      - { name: ds_tenant.unloader }
+
+  App\Tenant\Unloader\RecordAssociationUnloader:
+    tags:
+      - { name: ds_tenant.unloader, priority: -1 }
