--- a/api/config/services.yaml
+++ b/api/config/services.yaml
@@ -32,7 +32,7 @@ services:
     tags:
       - { name: ds_statistic.stat, alias: record.count }
 
-  App\Tenant\Loader\AccessLoader:
+  App\Tenant\Loader\AclLoader:
     tags:
       - { name: ds_tenant.loader }
 
